Stabilire denumire pagini

--- a/main/home.html
+++ b/main/home.html
@@ -4,15 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ghid Microsoft Word</title>
-    <link rel="stylesheet" href="D:\SITE_LECTII_WORD\Lectii_WORD_Site_WEB\style\styles.css">
+    <link rel="stylesheet" href="../style/styles.css">
 </head>
 <body>
     <main>
         <h1>Bine ați venit într-un loc unde puteți învăța funcționalitățile de bază din Microsoft Word!</h1>
-        <p>Adăugați mai mult conținut aici pentru a testa defilarea...</p>
+        <p>Pe acest site se vor prezenta functionalitati ale Word - ului precum: </p>
+        <ul>
+            <li>Inserarea unui imagini</li>
+            <li>Inserarea unui tabel</li>
+            <li>Formatarea textului</li>
+            <li>Adăugarea antetului și subsolului </li>
+            <li>Crearea automata a cuprinsului</li>
+            <li>Inserarea unui hyperlink</li>
+            <li>Inserarea formelor</li>
+            <li>Adaugare numerotare automata</li>
+        </ul>
     </main>
     <footer>
-        <p>&copy; 2023 Ghid Microsoft Word</p>
+        <p>&copy; 2025 Ghid Microsoft Word</p>
     </footer>
 </body>
 </html>
