Creare primele doua pagini si adaugare imagini

--- a/main/home.html
+++ b/main/home.html
@@ -10,17 +10,28 @@
     <main>
         <h1>Bine ați venit într-un loc unde puteți învăța funcționalitățile de bază din Microsoft Word!</h1>
         <p>Pe acest site se vor prezenta functionalitati ale Word - ului precum: </p>
-        <ul>
-            <li>Inserarea unui imagini</li>
-            <li>Inserarea unui tabel</li>
-            <li>Formatarea textului</li>
-            <li>Adăugarea antetului și subsolului </li>
-            <li>Crearea automata a cuprinsului</li>
-            <li>Inserarea unui hyperlink</li>
-            <li>Inserarea formelor</li>
-            <li>Adaugare numerotare automata</li>
-        </ul>
+        <div class="content">
+            <ul>
+                <li>
+                    <a href="inserare_imagine.html">Inserare Imagine</a>
+                </li>
+                <li>Inserarea unui tabel</li>
+                <li>Formatarea textului</li>
+                <li>Adăugarea antetului și subsolului</li>
+                <li>Crearea automata a cuprinsului</li>
+                <li>Inserarea unui hyperlink</li>
+                <li>Inserarea formelor</li>
+                <li>Adaugare numerotare automata</li>
+            </ul>
+            <img src="../images/images.png" alt="Imagine Microsoft" class="image-right">
+        </div>
+        <div class="bottom-centered-image">
+            <img src="../images/word1.png" alt="Imagine Word1">
+        </div>
     </main>
+    <footer>
+        <p>&copy; 2025 Ghid Microsoft Word</p>
+    </footer>
     <footer>
         <p>&copy; 2025 Ghid Microsoft Word</p>
     </footer>
