--- a/main/home.html
+++ b/main/home.html
@@ -9,19 +9,33 @@
 <body>
     <main>
         <h1>Bine ați venit într-un loc unde puteți învăța funcționalitățile de bază din Microsoft Word!</h1>
-        <p>Pe acest site se vor prezenta functionalitati ale Word - ului precum: </p>
+        <p class="p">Pe acest site se vor prezenta functionalitati ale Word - ului precum: </p>
         <div class="content">
             <ul>
                 <li>
                     <a href="inserare_imagine.html">Inserare Imagine</a>
                 </li>
-                <li>Inserarea unui tabel</li>
-                <li>Formatarea textului</li>
-                <li>Adăugarea antetului și subsolului</li>
-                <li>Crearea automata a cuprinsului</li>
-                <li>Inserarea unui hyperlink</li>
-                <li>Inserarea formelor</li>
-                <li>Adaugare numerotare automata</li>
+                <li>
+                    <a href="inserare_tabel.html">Inserare Tabel</a>
+                </li>
+                <li>
+                    <a href="formatare_text.html">Formatare Text</a>
+                </li>
+                <li>
+                    <a href="antet_subsol.html">Adaugare antet si subsol</a>
+                </li>
+                <li>
+                    <a href="creare_cuprins.html">Creare cuprins</a>
+                </li>
+                <li>
+                    <a href="inserare_hyperlink.html">Inserare hyperlink</a>
+                </li>
+                <li>
+                    <a href="inserare_forme.html">Inserare forme</a>
+                </li>
+                <li>
+                    <a href="numerotare_automata.html">Numerotare automata</a>
+                </li>
             </ul>
             <img src="../images/images.png" alt="Imagine Microsoft" class="image-right">
         </div>
