--- a/main/inserare_imagine.html
+++ b/main/inserare_imagine.html
@@ -19,9 +19,15 @@
                 <li>Selectează „This Device” pentru a alege o imagine din calculatorul tău.</li>
                 <li>Imaginea va apărea în document. O poți redimensiona sau muta cum vrei.</li>
             </ol>
+            <p class="p">
+                Această funcționalitate îți permite să adaugi poze în document pentru a face informațiile mai vizuale.
+                Poți adăuga imagini de pe calculator, din internet sau din colecțiile Office. După ce inserezi o imagine, 
+                poți să o redimensionezi, să o rotești, să îi adaugi borduri sau efecte speciale (umbrare, reflexii).
+            </p>
             <div class="bottom-centered-image">
                 <img src="../images/inserare_imagine1.png" alt="Inserare imagine">
             </div>
+           
     </main>
     <footer>
         <p>&copy; 2025 Ghid Microsoft Word</p>
